Add more test coverage for templates