@@ -21,11 +21,20 @@ package org.apache.druid.indexing.compact;
 
 import com.fasterxml.jackson.databind.InjectableValues;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.util.concurrent.Futures;
+import org.apache.druid.catalog.MapMetadataCatalog;
+import org.apache.druid.catalog.model.ResolvedTable;
+import org.apache.druid.catalog.model.TableId;
+import org.apache.druid.catalog.model.TableSpec;
+import org.apache.druid.catalog.model.table.IndexingTemplateDefn;
 import org.apache.druid.client.broker.BrokerClient;
 import org.apache.druid.client.coordinator.NoopCoordinatorClient;
 import org.apache.druid.client.indexing.ClientMSQContext;
+import org.apache.druid.common.utils.IdUtils;
 import org.apache.druid.guice.IndexingServiceTuningConfigModule;
+import org.apache.druid.guice.SupervisorModule;
 import org.apache.druid.indexer.CompactionEngine;
+import org.apache.druid.indexer.TaskState;
 import org.apache.druid.indexing.common.SegmentCacheManagerFactory;
 import org.apache.druid.indexing.common.TimeChunkLock;
 import org.apache.druid.indexing.common.actions.RetrieveUsedSegmentsAction;
@@ -39,6 +48,7 @@ import org.apache.druid.indexing.common.task.CompactionTask;
 import org.apache.druid.indexing.common.task.Task;
 import org.apache.druid.indexing.overlord.GlobalTaskLockbox;
 import org.apache.druid.indexing.overlord.HeapMemoryTaskStorage;
+import org.apache.druid.indexing.overlord.Segments;
 import org.apache.druid.indexing.overlord.TaskMaster;
 import org.apache.druid.indexing.overlord.TaskQueryTool;
 import org.apache.druid.indexing.overlord.TaskQueue;
@@ -49,8 +59,13 @@ import org.apache.druid.indexing.test.TestIndexerMetadataStorageCoordinator;
 import org.apache.druid.jackson.DefaultObjectMapper;
 import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.Intervals;
+import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.common.granularity.Granularities;
+import org.apache.druid.java.util.common.granularity.Granularity;
 import org.apache.druid.java.util.metrics.StubServiceEmitter;
+import org.apache.druid.metadata.SegmentsMetadataManager;
+import org.apache.druid.query.http.ClientSqlQuery;
+import org.apache.druid.query.http.SqlTaskStatus;
 import org.apache.druid.segment.TestDataSource;
 import org.apache.druid.segment.TestIndex;
 import org.apache.druid.server.compaction.CompactionSimulateResult;
@@ -66,11 +81,15 @@ import org.apache.druid.server.coordinator.CreateDataSegments;
 import org.apache.druid.server.coordinator.DataSourceCompactionConfig;
 import org.apache.druid.server.coordinator.DruidCompactionConfig;
 import org.apache.druid.server.coordinator.InlineSchemaDataSourceCompactionConfig;
+import org.apache.druid.server.coordinator.UserCompactionTaskGranularityConfig;
 import org.apache.druid.server.coordinator.simulate.BlockingExecutorService;
-import org.apache.druid.server.coordinator.simulate.TestSegmentsMetadataManager;
 import org.apache.druid.server.coordinator.simulate.WrappingScheduledExecutorService;
 import org.apache.druid.server.coordinator.stats.Stats;
 import org.apache.druid.timeline.DataSegment;
+import org.apache.druid.timeline.Partitions;
+import org.joda.time.DateTime;
+import org.joda.time.Duration;
+import org.joda.time.Interval;
 import org.joda.time.Period;
 import org.junit.Assert;
 import org.junit.Before;
@@ -82,6 +101,8 @@ import org.mockito.Mockito;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
 
 public class OverlordCompactionSchedulerTest
@@ -91,6 +112,7 @@ public class OverlordCompactionSchedulerTest
   static {
     OBJECT_MAPPER = new DefaultObjectMapper();
     OBJECT_MAPPER.registerModules(new IndexingServiceTuningConfigModule().getJacksonModules());
+    OBJECT_MAPPER.registerModules(new SupervisorModule().getJacksonModules());
     OBJECT_MAPPER.setInjectableValues(
         new InjectableValues
             .Std()
@@ -101,25 +123,42 @@ public class OverlordCompactionSchedulerTest
     );
   }
 
+  private static final DateTime JAN_20 = DateTimes.of("2025-01-20");
+  private static final DateTime MAR_11 = DateTimes.of("2025-03-11");
+
   private AtomicReference<ClusterCompactionConfig> compactionConfig;
   private CoordinatorOverlordServiceConfig coordinatorOverlordServiceConfig;
 
   private TaskMaster taskMaster;
   private TaskQueue taskQueue;
+  private BrokerClient brokerClient;
   private TaskActionClientFactory taskActionClientFactory;
   private BlockingExecutorService executor;
 
   private HeapMemoryTaskStorage taskStorage;
-  private TestSegmentsMetadataManager segmentsMetadataManager;
+  private TestIndexerMetadataStorageCoordinator segmentStorage;
+  private SegmentsMetadataManager segmentsMetadataManager;
   private StubServiceEmitter serviceEmitter;
 
+  private String dataSource;
+  private MapMetadataCatalog catalog;
   private OverlordCompactionScheduler scheduler;
 
   @Before
   public void setUp()
   {
+    dataSource = "wiki_" + IdUtils.getRandomId();
+
     final TaskRunner taskRunner = Mockito.mock(TaskRunner.class);
+    Mockito.when(taskRunner.getTotalCapacity()).thenReturn(10);
+    Mockito.when(taskRunner.getMaximumCapacityWithAutoscale()).thenReturn(10);
+
     taskQueue = Mockito.mock(TaskQueue.class);
+    catalog = new MapMetadataCatalog(OBJECT_MAPPER);
+
+    brokerClient = Mockito.mock(BrokerClient.class);
+    Mockito.when(brokerClient.submitSqlTask(ArgumentMatchers.any(ClientSqlQuery.class)))
+           .thenReturn(Futures.immediateFuture(new SqlTaskStatus(IdUtils.getRandomId(), TaskState.RUNNING, null)));
 
     taskMaster = new TaskMaster(null, null);
     Assert.assertFalse(taskMaster.isHalfOrFullLeader());
@@ -137,9 +176,10 @@ public class OverlordCompactionSchedulerTest
 
     executor = new BlockingExecutorService("test");
     serviceEmitter = new StubServiceEmitter();
-    segmentsMetadataManager = new TestSegmentsMetadataManager();
+    segmentStorage = new TestIndexerMetadataStorageCoordinator();
+    segmentsMetadataManager = segmentStorage.getManager();
 
-    compactionConfig = new AtomicReference<>(new ClusterCompactionConfig(null, null, null, true, null));
+    compactionConfig = new AtomicReference<>(new ClusterCompactionConfig(1.0, 10, null, true, null));
     coordinatorOverlordServiceConfig = new CoordinatorOverlordServiceConfig(false, null);
 
     taskActionClientFactory = task -> new TaskActionClient()
@@ -149,7 +189,10 @@ public class OverlordCompactionSchedulerTest
       public <RetType> RetType submit(TaskAction<RetType> taskAction)
       {
         if (taskAction instanceof RetrieveUsedSegmentsAction) {
-          return (RetType) segmentsMetadataManager.getAllSegments();
+          return (RetType) segmentStorage.retrieveAllUsedSegments(
+              ((RetrieveUsedSegmentsAction) taskAction).getDataSource(),
+              Segments.ONLY_VISIBLE
+          );
         } else if (taskAction instanceof TimeChunkLockTryAcquireAction) {
           final TimeChunkLockTryAcquireAction lockAcquireAction = (TimeChunkLockTryAcquireAction) taskAction;
           return (RetType) new TimeChunkLock(
@@ -191,14 +234,14 @@ public class OverlordCompactionSchedulerTest
             new SegmentCacheManagerFactory(TestIndex.INDEX_IO, OBJECT_MAPPER)
         ),
         (nameFormat, numThreads) -> new WrappingScheduledExecutorService("test", executor, false),
-        Mockito.mock(BrokerClient.class),
+        brokerClient,
         serviceEmitter,
         OBJECT_MAPPER
     );
   }
 
   @Test
-  public void testBecomeLeader_triggersStart_ifEnabled()
+  public void test_becomeLeader_triggersStart_ifEnabled()
   {
     Assert.assertTrue(scheduler.isEnabled());
 
@@ -212,7 +255,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testBecomeLeader_doesNotTriggerStart_ifDisabled()
+  public void test_becomeLeader_doesNotTriggerStart_ifDisabled()
   {
     disableScheduler();
     Assert.assertFalse(scheduler.isEnabled());
@@ -226,7 +269,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testStopBeingLeader_triggersStop()
+  public void test_stopBeingLeader_triggersStop()
   {
     Assert.assertFalse(scheduler.isRunning());
 
@@ -242,7 +285,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testDisablingScheduler_triggersStop()
+  public void test_disableSupervisors_triggersStop()
   {
     // Start scheduler
     scheduler.becomeLeader();
@@ -260,7 +303,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testEnablingScheduler_triggersStart()
+  public void test_enableSupervisors_triggersStart()
   {
     disableScheduler();
 
@@ -279,7 +322,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testSegmentsAreNotPolled_ifSupervisorsAreDisabled()
+  public void test_disableSupervisors_disablesSegmentPolling()
   {
     disableScheduler();
 
@@ -287,7 +330,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testSegmentsArePolled_whenRunningInStandaloneMode()
+  public void test_enableSupervisors_inStandaloneMode_enablesSegmentPolling()
   {
     coordinatorOverlordServiceConfig = new CoordinatorOverlordServiceConfig(false, null);
     initScheduler();
@@ -296,7 +339,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testSegmentsAreNotPolled_whenRunningInCoordinatorMode()
+  public void test_enableSupervisors_inCoordinatorMode_disablesSegmentPolling()
   {
     coordinatorOverlordServiceConfig = new CoordinatorOverlordServiceConfig(true, "overlord");
     initScheduler();
@@ -316,7 +359,7 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testNullCompactionConfigIsInvalid()
+  public void test_validateCompactionConfig_returnsInvalid_forNullConfig()
   {
     final CompactionConfigValidationResult result = scheduler.validateCompactionConfig(null);
     Assert.assertFalse(result.isValid());
@@ -324,11 +367,11 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testMsqCompactionConfigWithOneMaxTasksIsInvalid()
+  public void test_validateCompactionConfig_returnsInvalid_forMSQConfigWithOneMaxTasks()
   {
     final DataSourceCompactionConfig datasourceConfig = InlineSchemaDataSourceCompactionConfig
         .builder()
-        .forDataSource(TestDataSource.WIKI)
+        .forDataSource(dataSource)
         .withEngine(CompactionEngine.MSQ)
         .withTaskContext(Collections.singletonMap(ClientMSQContext.CTX_MAX_NUM_TASKS, 1))
         .build();
@@ -342,35 +385,24 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testStartCompaction()
+  public void test_startCompaction_enablesTaskSubmission_forDatasource()
   {
-    final List<DataSegment> wikiSegments = CreateDataSegments.ofDatasource(TestDataSource.WIKI).eachOfSizeInMb(100);
-    wikiSegments.forEach(segmentsMetadataManager::addSegment);
+    createSegments(1, Granularities.DAY, JAN_20);
 
     scheduler.becomeLeader();
-    scheduler.startCompaction(TestDataSource.WIKI, createSupervisor());
+    scheduler.startCompaction(dataSource, createSupervisorWithInlineSpec());
 
-    executor.finishNextPendingTask();
+    runCompactionTasks(1);
 
-    ArgumentCaptor<Task> taskArgumentCaptor = ArgumentCaptor.forClass(Task.class);
-    Mockito.verify(taskQueue, Mockito.times(1)).add(taskArgumentCaptor.capture());
-
-    Task submittedTask = taskArgumentCaptor.getValue();
-    Assert.assertNotNull(submittedTask);
-    Assert.assertTrue(submittedTask instanceof CompactionTask);
-
-    final CompactionTask compactionTask = (CompactionTask) submittedTask;
-    Assert.assertEquals(TestDataSource.WIKI, compactionTask.getDataSource());
-
-    final AutoCompactionSnapshot.Builder expectedSnapshot = AutoCompactionSnapshot.builder(TestDataSource.WIKI);
+    final AutoCompactionSnapshot.Builder expectedSnapshot = AutoCompactionSnapshot.builder(dataSource);
     expectedSnapshot.incrementCompactedStats(CompactionStatistics.create(100_000_000, 1, 1));
 
     Assert.assertEquals(
         expectedSnapshot.build(),
-        scheduler.getCompactionSnapshot(TestDataSource.WIKI)
+        scheduler.getCompactionSnapshot(dataSource)
     );
     Assert.assertEquals(
-        Collections.singletonMap(TestDataSource.WIKI, expectedSnapshot.build()),
+        Map.of(dataSource, expectedSnapshot.build()),
         scheduler.getAllCompactionSnapshots()
     );
 
@@ -381,27 +413,22 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testStopCompaction()
+  public void test_stopCompaction_disablesTaskSubmission_forDatasource()
   {
-    final List<DataSegment> wikiSegments = CreateDataSegments.ofDatasource(TestDataSource.WIKI).eachOfSizeInMb(100);
-    wikiSegments.forEach(segmentsMetadataManager::addSegment);
+    createSegments(1, Granularities.DAY, JAN_20);
 
     scheduler.becomeLeader();
-    scheduler.startCompaction(
-        TestDataSource.WIKI,
-        createSupervisor()
-    );
-    scheduler.stopCompaction(TestDataSource.WIKI);
+    scheduler.startCompaction(dataSource, createSupervisorWithInlineSpec());
+    scheduler.stopCompaction(dataSource);
 
-    executor.finishNextPendingTask();
-
+    runScheduledJob();
     Mockito.verify(taskQueue, Mockito.never()).add(ArgumentMatchers.any());
 
     Assert.assertEquals(
-        AutoCompactionSnapshot.builder(TestDataSource.WIKI)
+        AutoCompactionSnapshot.builder(dataSource)
                               .withStatus(AutoCompactionSnapshot.ScheduleStatus.NOT_ENABLED)
                               .build(),
-        scheduler.getCompactionSnapshot(TestDataSource.WIKI)
+        scheduler.getCompactionSnapshot(dataSource)
     );
     Assert.assertTrue(scheduler.getAllCompactionSnapshots().isEmpty());
 
@@ -412,20 +439,14 @@ public class OverlordCompactionSchedulerTest
   }
 
   @Test
-  public void testSimulateRun()
+  public void test_simulateRunWithConfigUpdate()
   {
-    final List<DataSegment> wikiSegments = CreateDataSegments
-        .ofDatasource(TestDataSource.WIKI)
-        .forIntervals(1, Granularities.DAY)
-        .startingAt("2013-01-01")
-        .withNumPartitions(10)
-        .eachOfSizeInMb(100);
-    wikiSegments.forEach(segmentsMetadataManager::addSegment);
+    createSegments(1, Granularities.DAY, DateTimes.of("2013-01-01"));
 
     scheduler.becomeLeader();
     runScheduledJob();
 
-    scheduler.startCompaction(TestDataSource.WIKI, createSupervisor());
+    scheduler.startCompaction(dataSource, createSupervisorWithInlineSpec());
 
     final CompactionSimulateResult simulateResult = scheduler.simulateRunWithConfigUpdate(
         new ClusterCompactionConfig(null, null, null, null, null)
@@ -439,10 +460,10 @@ public class OverlordCompactionSchedulerTest
     Assert.assertEquals(
         Collections.singletonList(
             Arrays.asList(
-                TestDataSource.WIKI,
+                dataSource,
                 Intervals.of("2013-01-01/P1D"),
-                10,
-                1_000_000_000L,
+                1,
+                100_000_000L,
                 1,
                 "not compacted yet"
             )
@@ -450,7 +471,7 @@ public class OverlordCompactionSchedulerTest
         pendingCompactionTable.getRows()
     );
 
-    scheduler.stopCompaction(TestDataSource.WIKI);
+    scheduler.stopCompaction(dataSource);
 
     final CompactionSimulateResult simulateResultWhenDisabled = scheduler.simulateRunWithConfigUpdate(
         new ClusterCompactionConfig(null, null, null, null, null)
@@ -458,6 +479,254 @@ public class OverlordCompactionSchedulerTest
     Assert.assertTrue(simulateResultWhenDisabled.getCompactionStates().isEmpty());
 
     scheduler.stopBeingLeader();
+  }
+
+  @Test
+  public void test_ingestHourGranularity_andCompactToDayAndMonth_withInlineTemplates()
+  {
+    final int numDays = (int) new Duration(MAR_11.getMillis() - JAN_20.getMillis()).getStandardDays();
+    createSegments(24 * numDays, Granularities.HOUR, JAN_20);
+    verifyNumSegmentsWith(Granularities.HOUR, 24 * numDays);
+
+    // Compact everything going back to Mar 10 to DAY granularity, rest to MONTH
+    final DateTime now = DateTimes.nowUtc();
+    final Period dayRulePeriod = new Period(now.getMillis() - MAR_11.minusDays(1).minusMinutes(1).getMillis());
+    CascadingCompactionTemplate cascadingTemplate = new CascadingCompactionTemplate(
+        dataSource,
+        List.of(
+            new CompactionRule(dayRulePeriod, new InlineCompactionJobTemplate(createMatcher(Granularities.DAY))),
+            new CompactionRule(Period.ZERO, new InlineCompactionJobTemplate(createMatcher(Granularities.MONTH)))
+        )
+    );
+
+    startCompactionWithSpec(cascadingTemplate);
+    runCompactionTasks(3);
+    verifyNumSegmentsWith(Granularities.DAY, 1);
+    verifyNumSegmentsWith(Granularities.MONTH, 2);
+  }
+
+  @Test
+  public void test_ingestHourGranularity_andCompactToDayAndMonth_withCatalogTemplates()
+  {
+    final int numDays = (int) new Duration(MAR_11.getMillis() - JAN_20.getMillis()).getStandardDays();
+    createSegments(24 * numDays, Granularities.HOUR, JAN_20);
+    verifyNumSegmentsWith(Granularities.HOUR, 24 * numDays);
+
+    // Add compaction templates to catalog
+    final String dayGranularityTemplateId = saveTemplateToCatalog(
+        new InlineCompactionJobTemplate(createMatcher(Granularities.DAY))
+    );
+    final String monthGranularityTemplateId = saveTemplateToCatalog(
+        new InlineCompactionJobTemplate(createMatcher(Granularities.MONTH))
+    );
+
+    // Compact everything going back to Mar 10 to DAY granularity, rest to MONTH
+    final DateTime now = DateTimes.nowUtc();
+    final Period dayRulePeriod = new Period(now.getMillis() - MAR_11.minusDays(1).minusMinutes(1).getMillis());
+    CascadingCompactionTemplate cascadingTemplate = new CascadingCompactionTemplate(
+        dataSource,
+        List.of(
+            new CompactionRule(dayRulePeriod, new CatalogCompactionJobTemplate(dayGranularityTemplateId, catalog)),
+            new CompactionRule(Period.ZERO, new CatalogCompactionJobTemplate(monthGranularityTemplateId, catalog))
+        )
+    );
+
+    startCompactionWithSpec(cascadingTemplate);
+    runCompactionTasks(3);
+    verifyNumSegmentsWith(Granularities.MONTH, 2);
+    verifyNumSegmentsWith(Granularities.DAY, 1);
+    verifyNumSegmentsWith(Granularities.HOUR, 24 * (numDays - 41));
+  }
+
+  @Test
+  public void test_ingestHourGranularity_andCompactToDayAndMonth_withCatalogMSQTemplates()
+  {
+    dataSource = TestDataSource.WIKI;
+
+    final int numDays = (int) new Duration(MAR_11.getMillis() - JAN_20.getMillis()).getStandardDays();
+    createSegments(24 * numDays, Granularities.HOUR, JAN_20);
+    verifyNumSegmentsWith(Granularities.HOUR, 24 * numDays);
+
+    // Add compaction templates to catalog
+    final String sqlDayGranularity =
+        "REPLACE INTO ${dataSource}"
+        + " OVERWRITE WHERE __time >= TIMESTAMP '${startTimestamp}' AND __time < TIMESTAMP '${endTimestamp}'"
+        + " SELECT * FROM ${dataSource}"
+        + " WHERE __time BETWEEN '${startTimestamp}' AND '${endTimestamp}'"
+        + " PARTITIONED BY DAY";
+    final String dayGranularityTemplateId = saveTemplateToCatalog(
+        new MSQCompactionJobTemplate(
+            new ClientSqlQuery(sqlDayGranularity, null, false, false, false, null, null),
+            createMatcher(Granularities.DAY)
+        )
+    );
+    final String sqlMonthGranularity =
+        "REPLACE INTO ${dataSource}"
+        + " OVERWRITE WHERE __time >= TIMESTAMP '${startTimestamp}' AND __time < TIMESTAMP '${endTimestamp}'"
+        + " SELECT * FROM ${dataSource}"
+        + " WHERE __time BETWEEN '${startTimestamp}' AND '${endTimestamp}'"
+        + " PARTITIONED BY MONTH";
+    final String monthGranularityTemplateId = saveTemplateToCatalog(
+        new MSQCompactionJobTemplate(
+            new ClientSqlQuery(sqlMonthGranularity, null, false, false, false, null, null),
+            createMatcher(Granularities.MONTH)
+        )
+    );
+
+    // Compact everything going back to Mar 10 to DAY granularity, rest to MONTH
+    final DateTime now = DateTimes.nowUtc();
+    final Period dayRulePeriod = new Period(now.getMillis() - MAR_11.minusDays(1).minusMinutes(1).getMillis());
+    CascadingCompactionTemplate cascadingTemplate = new CascadingCompactionTemplate(
+        dataSource,
+        List.of(
+            new CompactionRule(dayRulePeriod, new CatalogCompactionJobTemplate(dayGranularityTemplateId, catalog)),
+            new CompactionRule(Period.ZERO, new CatalogCompactionJobTemplate(monthGranularityTemplateId, catalog))
+        )
+    );
+
+    startCompactionWithSpec(cascadingTemplate);
+
+    // Verify that 3 MSQ compaction jobs are submitted to the Broker
+    executor.finishNextPendingTask();
+
+    ArgumentCaptor<ClientSqlQuery> queryArgumentCaptor = ArgumentCaptor.forClass(ClientSqlQuery.class);
+    Mockito.verify(brokerClient, Mockito.times(3)).submitSqlTask(queryArgumentCaptor.capture());
+
+    final List<ClientSqlQuery> submittedJobs = queryArgumentCaptor.getAllValues();
+    Assert.assertEquals(3, submittedJobs.size());
+
+    Assert.assertEquals(
+        "REPLACE INTO wiki"
+        + " OVERWRITE WHERE __time >= TIMESTAMP '2025-03-10 00:00:00.000' AND __time < TIMESTAMP '2025-03-11 00:00:00.000'"
+        + " SELECT * FROM wiki"
+        + " WHERE __time BETWEEN '2025-03-10 00:00:00.000' AND '2025-03-11 00:00:00.000'"
+        + " PARTITIONED BY DAY",
+        submittedJobs.get(0).getQuery()
+    );
+    Assert.assertEquals(
+        "REPLACE INTO wiki"
+        + " OVERWRITE WHERE __time >= TIMESTAMP '2025-02-01 00:00:00.000' AND __time < TIMESTAMP '2025-03-01 00:00:00.000'"
+        + " SELECT * FROM wiki"
+        + " WHERE __time BETWEEN '2025-02-01 00:00:00.000' AND '2025-03-01 00:00:00.000'"
+        + " PARTITIONED BY MONTH",
+        submittedJobs.get(1).getQuery()
+    );
+    Assert.assertEquals(
+        "REPLACE INTO wiki"
+        + " OVERWRITE WHERE __time >= TIMESTAMP '2025-01-01 00:00:00.000' AND __time < TIMESTAMP '2025-02-01 00:00:00.000'"
+        + " SELECT * FROM wiki"
+        + " WHERE __time BETWEEN '2025-01-01 00:00:00.000' AND '2025-02-01 00:00:00.000'"
+        + " PARTITIONED BY MONTH",
+        submittedJobs.get(2).getQuery()
+    );
+  }
+
+  private void verifyNumSegmentsWith(Granularity granularity, int numExpectedSegments)
+  {
+    long numMatchingSegments = segmentsMetadataManager
+        .getRecentDataSourcesSnapshot()
+        .getUsedSegmentsTimelinesPerDataSource()
+        .get(dataSource)
+        .findNonOvershadowedObjectsInInterval(Intervals.ETERNITY, Partitions.ONLY_COMPLETE)
+        .stream()
+        .filter(segment -> granularity.isAligned(segment.getInterval()))
+        .count();
+
+    Assert.assertEquals(
+        StringUtils.format("Segment with granularity[%s]", granularity),
+        numExpectedSegments,
+        (int) numMatchingSegments
+    );
+  }
+
+  private void createSegments(int numSegments, Granularity granularity, DateTime firstSegmentStart)
+  {
+    final List<DataSegment> segments = CreateDataSegments
+        .ofDatasource(dataSource)
+        .forIntervals(numSegments, granularity)
+        .startingAt(firstSegmentStart)
+        .eachOfSizeInMb(100);
+    segmentStorage.commitSegments(Set.copyOf(segments), null);
+  }
+
+  private String saveTemplateToCatalog(CompactionJobTemplate template)
+  {
+    final String templateId = IdUtils.getRandomId();
+    final TableId tableId = TableId.of(TableId.INDEXING_TEMPLATE_SCHEMA, templateId);
+
+    catalog.addSpec(
+        tableId,
+        new TableSpec(
+            IndexingTemplateDefn.TYPE,
+            Map.of(IndexingTemplateDefn.PROPERTY_PAYLOAD, template),
+            null
+        )
+    );
+
+    ResolvedTable table = catalog.resolveTable(tableId);
+    Assert.assertNotNull(table);
+
+    return templateId;
+  }
+
+  private void startCompactionWithSpec(DataSourceCompactionConfig config)
+  {
+    scheduler.becomeLeader();
+    final CompactionSupervisorSpec compactionSupervisor
+        = new CompactionSupervisorSpec(config, false, scheduler);
+    scheduler.startCompaction(config.getDataSource(), compactionSupervisor.createSupervisor());
+  }
+
+  private void runCompactionTasks(int expectedCount)
+  {
+    executor.finishNextPendingTask();
+
+    ArgumentCaptor<Task> taskArgumentCaptor = ArgumentCaptor.forClass(Task.class);
+    Mockito.verify(taskQueue, Mockito.times(expectedCount)).add(taskArgumentCaptor.capture());
+
+    for (Task task : taskArgumentCaptor.getAllValues()) {
+      Assert.assertTrue(task instanceof CompactionTask);
+      Assert.assertEquals(dataSource, task.getDataSource());
+      runCompactionTask((CompactionTask) task);
+    }
+
+    segmentStorage.getManager().forceUpdateDataSourcesSnapshot();
+  }
+
+  private void runCompactionTask(CompactionTask task)
+  {
+    // Determine interval and granularity and apply it to the timeline
+    final Interval compactionInterval = task.getIoConfig().getInputSpec().findInterval(dataSource);
+    final Granularity segmentGranularity = task.getSegmentGranularity();
+    if (segmentGranularity == null) {
+      // Nothing to do
+      return;
+    }
+
+    for (Interval replaceInterval : segmentGranularity.getIterable(compactionInterval)) {
+      // Create a single segment in this interval
+      DataSegment replaceSegment = CreateDataSegments
+          .ofDatasource(dataSource)
+          .forIntervals(1, segmentGranularity)
+          .startingAt(replaceInterval.getStart())
+          .withVersion("2")
+          .eachOfSizeInMb(100)
+          .get(0);
+      segmentStorage.commitSegments(Set.of(replaceSegment), null);
+    }
+  }
+
+  private static CompactionStateMatcher createMatcher(Granularity segmentGranularity)
+  {
+    return new CompactionStateMatcher(
+        null,
+        null,
+        null,
+        null,
+        null,
+        new UserCompactionTaskGranularityConfig(segmentGranularity, null, null),
+        null
+    );
   }
 
   private void disableScheduler()
@@ -475,12 +744,12 @@ public class OverlordCompactionSchedulerTest
     executor.finishNextPendingTask();
   }
 
-  private CompactionSupervisor createSupervisor()
+  private CompactionSupervisor createSupervisorWithInlineSpec()
   {
     return new CompactionSupervisorSpec(
         InlineSchemaDataSourceCompactionConfig
             .builder()
-            .forDataSource(TestDataSource.WIKI)
+            .forDataSource(dataSource)
             .withSkipOffsetFromLatest(Period.seconds(0))
             .build(),
         false,
